Avancé du NPC : -Skin automatique aléatoire + name (Gérere dans constant) -Modification des apparitions pour régler le problerme du double ajout